final touches remaining

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,26 +10,28 @@
 
     <Button
         android:id="@+id/reset"
-        style="@style/Widget.AppCompat.Button"
         android:layout_width="224dp"
         android:layout_height="91dp"
         android:layout_centerInParent="true"
         android:background="@android:color/darker_gray"
         android:onClick="reset"
         android:text="RESET"
+        android:background="@drawable/round"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="40sp"
         android:textStyle="bold"
-        android:typeface="monospace" />
+        android:typeface="monospace"
+        />
 
     <Button
         android:id="@+id/addone"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="65dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/reset"
+        android:layout_height="65dp"
+        android:layout_centerVertical="true"
         android:layout_marginEnd="2dp"
         android:layout_toStartOf="@+id/reset"
+        android:background="@drawable/round"
         android:onClick="addone"
         android:text="+"
         android:textSize="34sp"
@@ -38,11 +40,11 @@
     <Button
         android:id="@+id/subtractone"
         android:layout_width="65dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/reset"
-        android:layout_below="@id/textView2"
+        android:layout_height="65dp"
+        android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/reset"
         android:onClick="subtractone"
+        android:background="@drawable/round"
         android:text="-"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -86,10 +88,11 @@
 
     <Button
         android:id="@+id/button20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_below="@id/button19"
         android:layout_alignStart="@+id/addone"
+        android:background="@drawable/round"
         android:onClick="addfive"
         android:text="+5"
         android:textSize="30sp"
@@ -97,11 +100,13 @@
 
     <Button
         android:id="@+id/button21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button20"
-        android:layout_alignTop="@+id/button20"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_below="@id/button19"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:layout_toRightOf="@id/button20"
+        android:background="@drawable/round"
         android:onClick="addten"
         android:text="+10"
         android:textSize="30sp"
@@ -109,23 +114,24 @@
 
     <Button
         android:id="@+id/button22"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/button20"
-        android:layout_alignTop="@+id/button20"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:background="@drawable/round"
+        android:layout_below="@id/button19"
         android:layout_toRightOf="@id/button21"
         android:onClick="subtractfive"
+        android:layout_marginRight="30dp"
         android:text="-5"
         android:textSize="30sp"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/button23"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/button20"
-        android:layout_alignTop="@+id/button20"
-        android:layout_toRightOf="@id/button22"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:background="@drawable/round"
+        android:layout_below="@id/button19"
+        android:layout_alignRight="@id/button19"
         android:onClick="subtractten"
         android:text="-10"
         android:textSize="30sp"
