--- a/app/src/main/res/drawable/round.xml
+++ b/app/src/main/res/drawable/round.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <stroke
-        android:width="0dp"
-        android:color="#424242"   />
-    <corners android:radius="100dp"
-        android:color="#424242"   />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true" android:color="#D84315"/>
+    <item android:state_focused="true" android:color="#FFC107"/>
+    <item android:color="#76FF03"/>
+</selector>
