almost ready for apk

--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -3,11 +3,11 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#B9F6CA"
-                android:centerColor="#00E676"
-                android:endColor="#00C853"
+                android:startColor="#E0E0E0"
+                android:centerColor="#757575"
+                android:endColor="#424242"
                 android:type="radial"
-                android:gradientRadius="1000"/>
+                android:gradientRadius="600"/>
         </shape>
     </item>
 </selector>
