--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -4,7 +4,7 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
 
-            <solid android:color="@color/colorAccent" />
+            <solid android:color="#EEEEEE" />
             <corners android:radius="20dp" />
 
         </shape>
@@ -12,7 +12,7 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FF9800" />
+            <solid android:color="#212121" />
             <corners android:radius="20dp" />
         </shape>
 
