--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,20 +7,23 @@
     tools:context=".MainActivity"
     android:background="@drawable/gradient">
 
-
     <Button
         android:id="@+id/reset"
+        style="@style/Widget.AppCompat.Button"
         android:layout_width="224dp"
         android:layout_height="91dp"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/shape"
         android:onClick="reset"
+        android:selectAllOnFocus="true"
+        android:soundEffectsEnabled="true"
         android:text="RESET"
-        android:textColor="@drawable/round"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textColor="@drawable/round"
         android:textSize="40sp"
         android:textStyle="bold"
-        android:typeface="monospace"
-        />
+        android:typeface="monospace" />
 
     <Button
         android:id="@+id/addone"
@@ -64,18 +67,10 @@
         android:gravity="center_horizontal"
         android:text="0"
         android:textSize="50sp"
+        android:textColor="#E0E0E0"
         android:textStyle="bold"
         app:fontFamily="@font/coiny" />
 
-    <EditText
-        android:id="@+id/input"
-        android:layout_width="269dp"
-        android:layout_height="60dp"
-        android:layout_below="@id/reset"
-        android:layout_alignStart="@+id/addone"
-        android:layout_marginTop="5dp"
-        android:ems="10"
-        android:inputType="numberDecimal" />
 
     <Button
         android:id="@+id/button19"
@@ -83,12 +78,14 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/input"
         android:layout_alignBottom="@id/input"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="-7dp"
         android:layout_toRightOf="@id/input"
-        android:layout_alignParentEnd="true"
         android:onClick="manualadd"
         android:text="ADD"
-        android:textColor="@drawable/round"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textColor="@drawable/round1"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -98,11 +95,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/button19"
         android:layout_alignStart="@+id/addone"
-        android:onClick="addfive"
-        android:text="+5"
+        android:onClick="addten"
+        android:text="+10"
         android:textSize="30sp"
         android:background="@drawable/shape"
-
+android:layout_marginTop="5dp"
         android:textStyle="bold"
         android:padding="8dp"
         android:textColor="@drawable/round"
@@ -115,12 +112,12 @@
         android:layout_below="@id/button19"
         android:layout_toRightOf="@id/button20"
         android:layout_marginLeft="10dp"
-        android:onClick="addten"
-        android:text="+10"
+        android:onClick="addfive"
+        android:text="+5"
         android:textColor="@drawable/round"
         android:padding="8dp"
         android:background="@drawable/shape"
-
+android:layout_marginTop="5dp"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -136,7 +133,7 @@
         android:text="-5"
         android:padding="8dp"
         android:background="@drawable/shape"
-
+android:layout_marginTop="5dp"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -151,8 +148,18 @@
         android:onClick="subtractten"
         android:text="-10"
         android:background="@drawable/shape"
-
+android:layout_marginTop="5dp"
         android:textSize="30sp"
         android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/input"
+        android:layout_width="269dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/reset"
+        android:layout_alignStart="@+id/addone"
+        android:layout_marginTop="5dp"
+        android:ems="10"
+        android:inputType="numberSigned" />
 
 </RelativeLayout>
