--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,103 +63,135 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/reset"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="26dp"
         android:gravity="center_horizontal"
         android:text="0"
         android:textSize="50sp"
         android:textColor="#E0E0E0"
         android:textStyle="bold"
         app:fontFamily="@font/coiny" />
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_alignStart="@id/addone"
+        android:layout_alignEnd="@id/subtractone"
+        android:layout_alignParentBottom="false"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/reset"
+        android:orientation="vertical"
+        >
+    <LinearLayout
+        android:id="@+id/manual"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        >
+        <EditText
+            android:id="@+id/input"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:ems="10"
+            android:inputType="numberSigned" />
 
     <Button
         android:id="@+id/button19"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/input"
-        android:layout_alignBottom="@id/input"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="-7dp"
-        android:layout_toRightOf="@id/input"
+        android:layout_height="match_parent"
         android:onClick="manualadd"
+        android:layout_weight="0.1"
         android:text="ADD"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="@drawable/round1"
         android:textSize="30sp"
         android:textStyle="bold" />
+    </LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        >
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="0.04" />
     <Button
         android:id="@+id/button20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/button19"
-        android:layout_alignStart="@+id/addone"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:onClick="addten"
         android:text="+10"
-        android:textSize="30sp"
+        android:layout_weight="0.5"
+
         android:background="@drawable/shape"
-android:layout_marginTop="5dp"
+        android:layout_marginTop="5dp"
         android:textStyle="bold"
         android:padding="8dp"
+        android:textSize="30sp"
         android:textColor="@drawable/round"
         />
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="0.04" />
 
     <Button
         android:id="@+id/button21"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/button19"
-        android:layout_toRightOf="@id/button20"
-        android:layout_marginLeft="10dp"
         android:onClick="addfive"
         android:text="+5"
         android:textColor="@drawable/round"
         android:padding="8dp"
         android:background="@drawable/shape"
-android:layout_marginTop="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_weight="0.5"
+
         android:textSize="30sp"
         android:textStyle="bold" />
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="0.04" />
 
     <Button
         android:id="@+id/button22"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/button19"
-        android:layout_toLeftOf="@id/button23"
-        android:layout_marginRight="10dp"
         android:textColor="@drawable/round"
         android:onClick="subtractfive"
         android:text="-5"
+        android:layout_weight="0.5"
+
         android:padding="8dp"
         android:background="@drawable/shape"
-android:layout_marginTop="5dp"
+        android:layout_marginTop="5dp"
         android:textSize="30sp"
         android:textStyle="bold" />
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="0.04" />
 
     <Button
         android:id="@+id/button23"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/button19"
-        android:layout_alignRight="@id/button19"
         android:textColor="@drawable/round"
         android:padding="8dp"
+        android:layout_weight="0.5"
+
         android:onClick="subtractten"
         android:text="-10"
         android:background="@drawable/shape"
-android:layout_marginTop="5dp"
+        android:layout_marginTop="5dp"
         android:textSize="30sp"
         android:textStyle="bold" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="0.04" />
+    </LinearLayout>
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/input"
-        android:layout_width="269dp"
-        android:layout_height="60dp"
-        android:layout_below="@id/reset"
-        android:layout_alignStart="@+id/addone"
-        android:layout_marginTop="5dp"
-        android:ems="10"
-        android:inputType="numberSigned" />
 
 </RelativeLayout>
