--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,6 +116,7 @@
         >
         <View
             android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_weight="0.04" />
     <Button
         android:id="@+id/button20"
@@ -133,6 +134,7 @@
         android:textColor="@drawable/round"
         />
         <View
+            android:layout_height="0dp"
             android:layout_width="0dp"
             android:layout_weight="0.04" />
 
@@ -152,6 +154,7 @@
         android:textStyle="bold" />
         <View
             android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_weight="0.04" />
 
     <Button
@@ -170,6 +173,7 @@
         android:textStyle="bold" />
         <View
             android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_weight="0.04" />
 
     <Button
