--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,7 +130,7 @@
         android:layout_marginTop="5dp"
         android:textStyle="bold"
         android:padding="8dp"
-        android:textSize="30sp"
+        android:textSize="28dp"
         android:textColor="@drawable/round"
         />
         <View
